# LibDataTypes

./: CMakeLists.txt
src/: CMakeLists.txt  Double2.cpp  Double3.cpp  Image.cpp  Ray.cpp  Sphere.cpp
src/include/LibDataTypes/: Double2.h  Double3.h  IComputeShader.h  Image.h  Ray.h  Sphere.h
